[package]
name = "rsproto"
version = "0.1.0"
edition = "2021"
build = "rustproto/build.rs"

[lib]
path = "rustproto/src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
once_cell = "1.19.0"
tempfile = "3.12.0"
tokio = { version = "1.38.0", optional = true, default-features = false, features = ["rt"] }

[dev-dependencies]
sha2 = "0.10.8"

[features]
tokio = ["dep:tokio"]

[[test]]
name = "concurrent_parity"
path = "rustproto/tests/concurrent_parity.rs"

[[test]]
name = "concurrent_ffprobe"
path = "rustproto/tests/concurrent_ffprobe.rs"

[[test]]
name = "concurrent_parity_dash"
path = "rustproto/tests/concurrent_parity_dash.rs"

[profile.release]
codegen-units = 1
lto = false
