[package]
name = "rsproto"
version = "0.1.0"
edition = "2021"
build = "rustproto/build.rs"

[lib]
path = "rustproto/src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12.0"
tokio = { version = "1.38.0", optional = true, default-features = false, features = ["rt"] }

[dev-dependencies]
sha2 = "0.10.8"

[features]
tokio = ["dep:tokio"]

[[test]]
name = "concurrent_parity"
path = "rustproto/tests/concurrent_parity.rs"

[[test]]
name = "concurrent_ffprobe"
path = "rustproto/tests/concurrent_ffprobe.rs"

[[test]]
name = "concurrent_parity_dash"
path = "rustproto/tests/concurrent_parity_dash.rs"

[[test]]
name = "cancel_terminates"
path = "rustproto/tests/cancel_terminates.rs"

[[test]]
name = "ffprobe_json_parse"
path = "rustproto/tests/ffprobe_json_parse.rs"

[[test]]
name = "rsproto_inprocess_concurrency"
path = "rustproto/tests/rsproto_inprocess_concurrency.rs"

[profile.release]
codegen-units = 1
lto = false
